src/test/deca/syntax/parser/valid/single_semicolon.deca
// Parser with only one semicolon

{
    ;
}