src/test/deca/syntax/parser/invalid/decl_two_var_two_types.deca
// Should be only one int

{
    int int x, y;
}